[ tool.poetry]
name = "public"
version = "0.1.0"
description = "A collection of files I wish to publish."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.15.1"


[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
